--- a/qc_conditions.yml
+++ b/qc_conditions.yml
@@ -46,7 +46,7 @@ fastqc:
         condition_type: eq
         condition_value: FAIL
   'Sequence Duplication Levels':
-      failure:
+      warning:
         condition_type: eq
         condition_value: FAIL
   'Overrepresented sequences':
