add profiles for batch

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,31 +1,19 @@
-trace {
-  enabled = true
-  file = "pipeline_stats.txt"
-  fields = "task_id,\
-  hash,\
-  process,\
-  tag,\
-  status,\
-  exit,\
-  start,\
-  container,\
-  cpus,\
-  time,\
-  disk,\
-  memory,\
-  duration,\
-  realtime,\
-  queue,\
-  %cpu,\
-  %mem,\
-  rss,\
-  vmem,\
-  rchar,\
-  wchar"
-}
-docker.runOptions='-u $(id -u):$(id -g)'
-process {
-    cpus = 1
-    memory = "2GB"
-
+profiles {
+  standard {
+    includeConfig 'base.config'
+    process.executor = 'local'
+  }
+  aws_batch {
+    includeConfig 'base.config'
+    aws {
+      region = 'eu-west-2'
+    }
+    executor.awscli = '/home/ec2-user/miniconda3/bin/aws'
+    process {
+      queue = params.aws_batch_queue
+      executor = 'awsbatch'
+      errorStrategy = { task.attempt <= 2 ? "retry" : "ignore" }
+      maxRetries = 2
+    }
+  }
 }
