incorporation of speciation and file size check features

--- a/base.config
+++ b/base.config
@@ -1,6 +1,19 @@
+params.pipeline_info = "${params.output_dir}/pipeline_info"
+timeline {
+  enabled = true
+  file = "${params.pipeline_info}/execution_timeline.html"
+}
+report {
+  enabled = true
+  file = "${params.pipeline_info}/execution_report.html"
+}
+dag {
+  enabled = true
+  file = "${params.pipeline_info}/pipeline_dag.svg"
+}
 trace {
   enabled = true
-  file = "pipeline_stats.txt"
+  file = "${params.pipeline_info}/pipeline_stats.txt"
   fields = "task_id,\
   hash,\
   process,\
@@ -28,5 +41,6 @@ docker.enabled = true
 process {
   cpus = 1
   memory = '2G'
-  container = 'bioinformant/ghru-assembly:1.3.1'
+  container = 'bioinformant/ghru-assembly:1.4.0'
+  errorStrategy = { task.attempt <= 2 ? "retry" : "ignore" }
 }
