update version; output DAG as png; correct problems with files name .R{1,2}.fastq.gz

--- a/base.config
+++ b/base.config
@@ -9,7 +9,7 @@ report {
 }
 dag {
   enabled = true
-  file = "${params.pipeline_info}/pipeline_dag.svg"
+  file = "${params.pipeline_info}/pipeline_dag.png"
 }
 trace {
   enabled = true
