make per base N a warning not a failure

--- a/qc_conditions.yml
+++ b/qc_conditions.yml
@@ -44,7 +44,7 @@ fastqc:
         condition_type: eq
         condition_value: FAIL
   'Per base N content':
-      failure:
+      warning:
         condition_type: eq
         condition_value: FAIL
   'Sequence Length Distribution':
