--- a/qc_conditions_nextera.yml
+++ b/qc_conditions_nextera.yml
@@ -40,7 +40,7 @@ fastqc:
         condition_type: eq
         condition_value: FAIL
   'Per base N content':
-      failure:
+      warning:
         condition_type: eq
         condition_value: FAIL
   'Sequence Length Distribution':
