--- a/qc_conditions.yml
+++ b/qc_conditions.yml
@@ -77,3 +77,8 @@ bactinspector:
     warning:
       condition_type: eq
       condition_value: ''
+file_size_check:
+  'size':
+    failure:
+      condition_type: lt
+      condition_value: MIN_FILE_SIZE
