update to 1.4.1 to cater for very poor sequence data or highly contaminated sequences

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,22 @@ profiles {
   standard {
     includeConfig 'base.config'
     process.executor = 'local'
+    docker.runOptions='-u $(id -u):$(id -g)'
+    docker.enabled = true
+    container = 'bioinformant/ghru-assembly:1.4.1'
+  }
+  sanger {
+    includeConfig 'base.config'
+    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.4.1.sif'
+    singularity {
+      enabled = true
+      runOptions = '--bind /lustre --bind /nfs'
+    }
+    process.cpus = 1
+    process.memory = '2G'
+    process.executor = 'lsf'
+    process.queue = 'normal'
+    executor.perJobMemLimit = true
   }
   aws_batch {
     includeConfig 'base.config'
