--- a/base.config
+++ b/base.config
@@ -36,11 +36,9 @@ trace {
   rchar,\
   wchar"
 }
-docker.runOptions='-u $(id -u):$(id -g)'
-docker.enabled = true
 process {
   cpus = 1
   memory = '2G'
-  container = 'bioinformant/ghru-assembly:1.4.0'
   errorStrategy = { task.attempt <= 2 ? "retry" : "ignore" }
+  maxRetries = 2 
 }
