--- a/nextflow.config
+++ b/nextflow.config
@@ -4,11 +4,11 @@ profiles {
     process.executor = 'local'
     docker.runOptions='-u $(id -u):$(id -g)'
     docker.enabled = true
-    container = 'bioinformant/ghru-assembly:1.4.1'
+    process.container = 'bioinformant/ghru-assembly:1.4.2'
   }
   sanger {
     includeConfig 'base.config'
-    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.4.1.sif'
+    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.4.2.sif'
     singularity {
       enabled = true
       runOptions = '--bind /lustre --bind /nfs'
