remove _scaffolds from assembly name and update confindr command for version 0.7.2

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,7 @@ profiles {
     process.executor = 'local'
     docker.runOptions='-u $(id -u):$(id -g)'
     docker.enabled = true
-    process.container = 'bioinformant/ghru-assembly:1.4.4'
+    process.container = 'bioinformant/ghru-assembly-conda:latest'
   }
   sanger {
     includeConfig 'base.config'
