--- a/nextflow.config
+++ b/nextflow.config
@@ -4,11 +4,11 @@ profiles {
     process.executor = 'local'
     docker.runOptions='-u $(id -u):$(id -g)'
     docker.enabled = true
-    process.container = 'bioinformant/ghru-assembly-conda:latest'
+    process.container = 'bioinformant/ghru-assembly:1.5.0'
   }
   sanger {
     includeConfig 'base.config'
-    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.4.4.sif'
+    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.5.0.sif'
     singularity {
       enabled = true
       runOptions = '--bind /lustre --bind /nfs/pathnfs01 --bind /nfs/pathnfs02 --bind /nfs/pathnfs03 --bind /nfs/pathnfs04 --bind /nfs/pathnfs05 --bind /nfs/pathnfs06 --no-home'
