--- a/qc_conditions_nextera_relaxed.yml
+++ b/qc_conditions_nextera_relaxed.yml
@@ -36,7 +36,7 @@ fastqc:
         condition_type: eq
         condition_value: FAIL
   'Per sequence GC content':
-      failure:
+      warning:
         condition_type: eq
         condition_value: FAIL
   'Per base N content':
@@ -64,6 +64,10 @@ confindr:
     failure:
       condition_type: eq
       condition_value: 'True'
+  'percentage_contamination':
+    failure:
+      condition_type: gt
+      condition_value: 5
 bactinspector:
   'result':
     warning:
