changes for sanger

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ profiles {
     process.memory = '2G'
     process.executor = 'lsf'
     process.queue = 'normal'
+    process.clusterOptions = "-G cgps -R'select[mem>8000]' -R'rusage[mem=8000]' -M 8000"
     executor.perJobMemLimit = true
     process.errorStrategy = { task.attempt <= 5 ? "retry" : "ignore" }
     process.maxRetries = 5
