account for number of bases sometimes being larger than int type is capable of. Failed samples need percent contamination. More RAM for fastqc multiqc if needed

--- a/templates/failed_sample_qualifyr_files/conditions_for_failed_samples.yml
+++ b/templates/failed_sample_qualifyr_files/conditions_for_failed_samples.yml
@@ -53,6 +53,10 @@ confindr:
     failure:
       condition_type: ne
       condition_value: NA
+  'percentage_contamination':
+    failure:
+      condition_type: gt
+      condition_value: 5
 bactinspector:
   'result':
     warning:
