if a task fails, finish not ignore

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ profiles {
     process.executor = 'lsf'
     process.queue = 'normal'
     executor.perJobMemLimit = true
-    process.errorStrategy = { task.attempt <= 5 ? "retry" : "ignore" }
+    process.errorStrategy = { task.attempt <= 5 ? "retry" : "finish" }
     process.maxRetries = 5
     tower {
       enabled = true
