--- a/base.config
+++ b/base.config
@@ -40,6 +40,6 @@ trace {
 process {
   cpus = 1
   memory = '2G'
-  errorStrategy = { task.attempt <= 2 ? "retry" : "ignore" }
+  errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
   maxRetries = 2 
 }
