--- a/qc_conditions_nextera_relaxed.yml
+++ b/qc_conditions_nextera_relaxed.yml
@@ -68,6 +68,9 @@ confindr:
     failure:
       condition_type: gt
       condition_value: 5
+    warning:
+      condition_type: gt
+      condition_value: 0
 bactinspector:
   'result':
     warning:
