--- a/nextflow.config
+++ b/nextflow.config
@@ -4,11 +4,11 @@ profiles {
     process.executor = 'local'
     docker.runOptions='-u $(id -u):$(id -g)'
     docker.enabled = true
-    process.container = 'bioinformant/ghru-assembly:1.5.2'
+    process.container = 'bioinformant/ghru-assembly:1.5.3'
   }
   sanger {
     includeConfig 'base.config'
-    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.5.2.sif'
+    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.5.3.sif'
     singularity {
       enabled = true
       runOptions = '--bind /lustre --bind /nfs/pathnfs01 --bind /nfs/pathnfs02 --bind /nfs/pathnfs03 --bind /nfs/pathnfs04 --bind /nfs/pathnfs05 --bind /nfs/pathnfs06 --no-home'
@@ -17,7 +17,13 @@ profiles {
     process.memory = '2G'
     process.executor = 'lsf'
     process.queue = 'normal'
-    executor.perJobMemLimit = true
+    executor{
+      name = 'lsf'
+      perJobMemLimit = true
+      poolSize = 4
+      submitRateLimit = '5 sec'
+      killBatchSize = 50
+    }
     process.errorStrategy = { task.attempt <= 5 ? "retry" : "finish" }
     process.maxRetries = 5
     tower {
