Adapt GHRU workflow

--- a/conf/base.config
+++ b/conf/base.config
@@ -1,17 +1,28 @@
-params.output_dir="./.default_output"
-params.pipeline_info = "${params.output_dir}/pipeline_info"
+params.outdir = "."
+params.pipeline_info = "${params.outdir}/pipeline_info"
+
+process {
+  cpus = 1
+  memory = '4G'
+  errorStrategy = { task.attempt <= 2 ? "retry" : "terminate" }
+  maxRetries = 2
+}
+
 timeline {
   enabled = true
   file = "${params.pipeline_info}/execution_timeline.html"
 }
+
 report {
   enabled = true
   file = "${params.pipeline_info}/execution_report.html"
 }
+
 dag {
   enabled = true
   file = "${params.pipeline_info}/pipeline_dag.png"
 }
+
 trace {
   enabled = true
   file = "${params.pipeline_info}/pipeline_stats.txt"
@@ -36,10 +47,4 @@ trace {
   vmem,\
   rchar,\
   wchar"
-}
-process {
-  cpus = 1
-  memory = '2G'
-  errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
-  maxRetries = 2 
 }
