--- a/nextflow.config
+++ b/nextflow.config
@@ -1,46 +1,20 @@
+includeConfig 'conf/base.config'
+
 profiles {
   standard {
-    includeConfig 'base.config'
     process.executor = 'local'
     docker.runOptions='-u $(id -u):$(id -g)'
     docker.enabled = true
     process.container = 'bioinformant/ghru-assembly:1.5.5'
   }
-  sanger {
-    includeConfig 'base.config'
-    process.container = '/lustre/scratch118/infgen/team212/au3/singularity/ghru-assembly-1.5.5.sif'
-    singularity {
-      enabled = true
-      runOptions = '--bind /lustre --bind /nfs/pathnfs01 --bind /nfs/pathnfs02 --bind /nfs/pathnfs03 --bind /nfs/pathnfs04 --bind /nfs/pathnfs05 --bind /nfs/pathnfs06 --no-home'
+}
+
+process {
+    withName: spades_assembly {
+        cpus = { 4 * task.attempt }
+        memory = { 16.GB * task.attempt }
     }
-    process.cpus = 1
-    process.memory = '2G'
-    process.executor = 'lsf'
-    process.queue = 'normal'
-    executor{
-      name = 'lsf'
-      perJobMemLimit = true
-      poolSize = 4
-      submitRateLimit = '5 sec'
-      killBatchSize = 50
+    withName: check_for_contamination {
+        cpus = 2
     }
-    process.errorStrategy = { task.attempt <= 5 ? "retry" : "finish" }
-    process.maxRetries = 5
-    tower {
-      enabled = true
-    }
-  }
-  aws_batch {
-    includeConfig 'base.config'
-    aws {
-      region = 'eu-west-2'
-    }
-    executor.awscli = '/home/ec2-user/miniconda3/bin/aws'
-    process {
-      queue = params.aws_batch_queue
-      executor = 'awsbatch'
-      errorStrategy = { task.attempt <= 2 ? "retry" : "ignore" }
-      maxRetries = 2
-    }
-  }
 }
